tests/spec/core_functions/color/change_color/error/args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/change_color/error/args.hrx"

// Ignoring "too_few", error tests are not supported yet.

// Ignoring "too_many", error tests are not supported yet.

// Ignoring "unknown", error tests are not supported yet.
